--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <img src="assets/images/pro1.png" alt="" />
                     <h4>Siakas SDIT Ali Bin Abi Thalib</h4>
                     <p>Website ini merupakan sistem informasi pembayaran keuangan sekolah yang dapat diakses oleh wali murid dan bendahara sekolah.</p>
-                    <a href="#" class="main-button"> Link to Web </a>
+                    <a href="https://sditalibinabithali.com" target="_blank" class="main-button"> Link to Web </a>
                   </div>
                 </div>
               </div>
