--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="row justify-content-center">
             <div class="left-text col-md-8" data-scroll-reveal="enter top move 30px over 0.6s after 0.4s">
               <h1>Yodi Wahyu <em>Hardiyanto</em></h1>
-              <p>I am a young man who has little ability to develop websites and I come from the city of Jepara and graduated from the University Islam Nahdlatul Ulama of Jepara.</p>
+              <p>Saya merupakan freelancer Web Development yang memiliki riwayat pendidikan Sistem Informasi di Universitas Islam Nahdlatul Ulama Jepara.</p>
               <a target="_blank" href="https://wa.me/+6285253332922" class="main-button-slider"><i class="bi bi-whatsapp"></i> Contact Me</a>
             </div>
           </div>
@@ -111,7 +111,7 @@
                     <img src="assets/images/pro1.png" alt="" />
                     <h4>Siakas SDIT Ali Bin Abi Thalib</h4>
                     <p>Website ini merupakan sistem informasi pembayaran keuangan sekolah yang dapat diakses oleh wali murid dan bendahara sekolah.</p>
-                    <a href="https://sditalibinabithali.com" target="_blank" class="main-button"> Link to Web </a>
+                    <a href="https://sditalibinabithalib.com" target="_blank" class="main-button"> Link to Web </a>
                   </div>
                 </div>
               </div>
@@ -122,7 +122,7 @@
                     <img src="assets/images/pro2.png" alt="" />
                     <h4>Kencana Net</h4>
                     <p>Website static yang memiliki fungsi sistem pelaporan troble wifi serta penagihan tagihan internet pelanggan KencanaNet mitra JSN.</p>
-                    <a href="#" class="main-button"> Link to Web </a>
+                    <a href="https://kcnt.xyz" target="_blank" class="main-button"> Link to Web </a>
                   </div>
                 </div>
               </div>
@@ -144,7 +144,18 @@
                     <img src="assets/images/pro4.png" alt="" />
                     <h4>Pemilihan Beasiswa</h4>
                     <p>Website ini merupakan sistem informasi penentuan siswa penerima beasiswa dengan menggunakan metode FCM dan SAW.</p>
-                    <a href="#" class="main-button"> Link to Web </a>
+                    <a href="https://beasiswasdnmangunan.kcnt.xyz/" target="_blank" class="main-button"> Link to Web </a>
+                  </div>
+                </div>
+              </div>
+              <div class="item service-item">
+                <div class="features-item">
+                  <div class="features-icon">
+                    <h2>05</h2>
+                    <img src="assets/images/pro5.png" alt="" />
+                    <h4>Binamandiri</h4>
+                    <p>Website ini merupakan website untuk koperasi bina mandiri sentra niaga.</p>
+                    <a href="https://binamandiri.id/" target="_blank" class="main-button"> Link to Web </a>
                   </div>
                 </div>
               </div>
