--- a/index.html
+++ b/index.html
@@ -250,10 +250,10 @@
                     <li><p>Juli 2015 - Juli 2017 : Operator Produksi PT. Astra Daihatsu Motor-Karawang</p></li>
                   </ul>
                   <ul>
-                    <li><p>Juli 2020 - Mei 2023 : Staff Administrasi SDIT Ali Bin Abi Thalib-Jepara</p></li>
+                    <li><p>Juli 2020 - September 2023 : Staff Administrasi SDIT Ali Bin Abi Thalib-Jepara</p></li>
                   </ul>
                   <ul>
-                    <li><p>November 2022 - Sekarang : Freelance Web Develop</p></li>
+                    <li><p>Juli 2022 - Sekarang : Freelance Web Develop</p></li>
                   </ul>
                 </div>
               </div>
